public/assets/css/working/01-variables.css
/* START VARIABLES */
:root {

	color-scheme: light dark;

	/* COLORS */
	--grayscale-00 : hsla(   0,   0.0%, 100.0%, 1 ); /* #ffffff, rgba( 255, 255, 255, 1 ) */
	--grayscale-01 : hsla(   0,   0.0%,  98.0%, 1 ); /* #fafafa, rgba( 250, 250, 250, 1 ) */
	--grayscale-02 : hsla(   0,   0.0%,  94.0%, 1 ); /* #f0f0f0, rgba( 240, 240, 240, 1 ) */
	--grayscale-03 : hsla(   0,   0.0%,  92.9%, 1 ); /* #ededed, rgba( 237, 237, 237, 1 ) */
	--grayscale-04 : hsla(   0,   0.0%,  90.2%, 1 ); /* #e6e6e6, rgba( 230, 230, 230, 1 ) */
	--grayscale-05 : hsla(   0,   0.0%,  88.2%, 1 ); /* #e1e1e1, rgba( 225, 225, 225, 1 ) */
	--grayscale-06 : hsla(   0,   0.0%,  86.7%, 1 ); /* #dddddd, rgba( 221, 221, 221, 1 ) */
	--grayscale-07 : hsla(   0,   0.0%,  82.7%, 1 ); /* #d3d3d3, rgba( 211, 211, 211, 1 ) */
	--grayscale-08 : hsla(   0,   0.0%,  80.4%, 1 ); /* #d4d4d4, rgba( 205, 205, 205, 1 ) */
	--grayscale-09 : hsla(   0,   0.0%,  78.8%, 1 ); /* #c9c9c9, rgba( 201, 201, 201, 1 ) */
	--grayscale-10 : hsla(   0,   0.0%,  74.9%, 1 ); /* #bfbfbf, rgba( 191, 191, 191, 1 ) */
	--grayscale-11 : hsla(   0,   0.0%,  71.0%, 1 ); /* #b5b5b5, rgba( 181, 181, 181, 1 ) */
	--grayscale-12 : hsla(   0,   0.0%,  67.5%, 1 ); /* #acacac, rgba( 172, 172, 172, 1 ) */
	--grayscale-13 : hsla(   0,   0.0%,  63.5%, 1 ); /* #a2a2a2, rgba( 162, 162, 162, 1 ) */
	--grayscale-14 : hsla(   0,   0.0%,  48.2%, 1 ); /* #7b7b7b, rgba( 123, 123, 123, 1 ) */
	--grayscale-15 : hsla(   0,   0.0%,  44.3%, 1 ); /* #717171, rgba( 113, 113, 113, 1 ) */
	--grayscale-16 : hsla(   0,   0.0%,  40.4%, 1 ); /* #676767, rgba( 103, 103, 103, 1 ) */
	--grayscale-17 : hsla(   0,   0.0%,  36.5%, 1 ); /* #5d5d5d, rgba( 93, 93, 93, 1 )    */
	--grayscale-18 : hsla(   0,   0.0%,  32.9%, 1 ); /* #545454, rgba( 84, 84, 84, 1 )    */
	--grayscale-19 : hsla(   0,   0.0%,  29.0%, 1 ); /* #4a4a4a, rgba( 74, 74, 74, 1 )    */
	--grayscale-20 : hsla(   0,   0.0%,  25.1%, 1 ); /* #404040, rgba( 64, 64, 64, 1 )    */
	--grayscale-21 : hsla(   0,   0.0%,  21.2%, 1 ); /* #363636, rgba( 54, 54, 54, 1 )    */
	--grayscale-22 : hsla(   0,   0.0%,  17.3%, 1 ); /* #2c2c2c, rgba( 44, 44, 44, 1 )    */
	--grayscale-23 : hsla(   0,   0.0%,  13.7%, 1 ); /* #232323, rgba( 35, 35, 35, 1 )    */
	--grayscale-24 : hsla(   0,   0.0%,   9.8%, 1 ); /* #191919, rgba( 25, 25, 25, 1 )    */
	--grayscale-25 : hsla(   0,   0.0%,   5.9%, 1 ); /* #0f0f0f, rgba( 15, 15, 15, 1 )    */
	--grayscale-26 : hsla(   0,   0.0%,   0.0%, 1 ); /* #000000, rgba( 0, 0, 0, 1 )       */
	--red          : hsla(   0, 100.0%,  43.3%, 1 ); /* #dd0000, rgba( 221, 0, 0, 1 )     */
	--red-medium   : hsla(   0, 100.0%,  39.2%, 1 ); /* #c80000, rgba( 200, 0, 0, 1 )     */
	--red-dark     : hsla(   0, 100.0%,  32.4%, 1 ); /* #a50000, rgba( 165, 0, 0, 1 )     */
	--blue         : hsla( 210,  64.4%,  50.4%, 1 ); /* #2f81d2, rgba( 47, 129, 210, 1 )  */

	--scrollbarTrackColor       : transparent;
	--scrollbarThumbColor       : var( --grayscale-13 );
	--scrollbarThumbBorderColor : var( --grayscale-08 );

	/* COLOR OPACITY VARIATIONS */
	--grayscale-00-a9  : hsla(   0,   0.0%, 100.0%, .9  );
	--grayscale-19-a85 : hsla(   0,   0.0%,  29.0%, .85 );
	--grayscale-21-a85 : hsla(   0,   0.0%,  21.2%, .85 );
	--grayscale-23-a85 : hsla(   0,   0.0%,  13.7%, .85 ); 
	--red-medium-a85   : hsla(   0, 100.0%,  39.2%, .85 );
	--red-dark-a85     : hsla(   0, 100.0%,  32.4%, .85 );

	/* BASE */
	--font-family-base : sans-serif;
	--font-size-base   : 14px;

	/* FORM */
	--font-size-form-inputs : var( --font-size-base );

}

@media ( max-width: 600px ) {
	:root {
		--font-size-base : 15px;
	}
}

:root, :root .light-mode {

	/* BASE */
	--font-color-base               : var( --grayscale-25 );
	--font-color-a-base             : var( --grayscale-25 );
	--outline-color-base            : var( --blue );
	--outline-box-shadow-color-base : var( --blue );

	/* BODY */
	--background-color-body : var( --grayscale-08 );

	/* FORM */
	--font-color-form                           : var( --grayscale-00 );
	--font-color-form-inputs                    : var( --font-color-base );
	--font-color-form-error                     : var( --red );
	--border-color-form-inputs                  : var( --grayscale-09 );
	--border-color-form-input-radio             : var( --grayscale-09 );
	--background-color-form                     : var( --grayscale-20 );
	--background-color-form-label               : var( --grayscale-19 );
	--background-color-form-inputs              : var( --grayscale-01 );
	--background-color-form-input-radio         : var( --grayscale-09 );
	--background-color-form-input-radio-checked : var( --font-color-base );
	--linear-gradient-form-label-hover   		: linear-gradient( var( --grayscale-21 ), var( --grayscale-21-a85 ) );
	--linear-gradient-form-warning 		        : linear-gradient( var( --red-dark ), var( --red-dark-a85 ) );
	--linear-gradient-form-close-hover   	    : var( --linear-gradient-form-label-hover );
	--stroke-form-svg                           : var( --grayscale-14 );
	--stroke-form-svg-hover                     : var( --grayscale-08 );
	--background-image-form-select              : url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='25' height='34' viewBox='0 0 25 34'><g fill-rule='evenodd' stroke='none'><rect width='25' height='34' fill='hsla(0,0.0%,88.2%,1)' /><polygon fill='hsla(0,0.0%,9.8%,1)' points='12.5 14 19 20 6 20' transform='matrix(1 0 0 -1 0 34)'/></g></svg>");
	--background-image-form-checkbox            : url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='10' height='9' viewBox='0 0 8 7'><polyline fill='none' stroke='hsla(0,0.0%,9.8%,1)' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' points='1 4 3 6 7 1'/></svg>");
      
	/* BOOKMARKS */
	--font-color-bookmarks-button           : var( --font-color-base );
	--font-color-bookmarks-hover            : var( --grayscale-00 );
	--background-color-bookmarks            : var( --grayscale-08 );
	--background-color-bookmarks-drag-hover : var( --grayscale-05 );
	--linear-gradient-bookmarks-a-hover     : linear-gradient( var( --red-medium ), var( --red-medium-a85 ) ); 
	--linear-gradient-bookmarks-a           : linear-gradient( var( --grayscale-00 ), var( --grayscale-00-a9 ) );
	--fill-bookmarks-svg-loader             : var( --grayscale-01 );

	/* FOOTER */
	--font-color-footer-a-hover : var( --red-medium );
	--border-color-footer-a     : var( --grayscale-18 );
	--background-color-footer   : var( --grayscale-08 );
                
	/* MODAL */
    --font-color-modal-a-hover     : var( --red-medium );
	--background-color-modal-ol-li : var( --grayscale-04 );
	--background-color-modal       : var( --grayscale-01 );
	--box-shadow-color-modal       : 0 0 90px var( --grayscale-26 );

}

:root .dark-mode {

	/* BASE */
	--font-color-base   : var( --grayscale-02 );
	--font-color-a-base : var( --grayscale-02 );

	/* BODY */
	--background-color-body : var( --background-color-form );

	/* FORM */
	--font-color-form-inputs                    : var( --grayscale-25 );
	--background-color-form                     : var( --grayscale-24 );
	--background-color-form-label               : var( --grayscale-22 );
	--background-color-form-inputs              : var( --grayscale-03 );
	--background-color-form-input-radio-checked : var( --grayscale-25 );
	--linear-gradient-form-label-hover          : linear-gradient( var( --grayscale-23 ), var( --grayscale-23-a85 ) );
	--linear-gradient-form-close-hover          : var( --linear-gradient-form-label-hover );
	--background-image-form-select              : url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='25' height='34' viewBox='0 0 25 34'><g fill-rule='evenodd' stroke='none'><rect width='25' height='34' fill='rgba(201,201,201,1)' /><polygon fill='rgba(25,25,25,1)' points='12.5 14 19 20 6 20' transform='matrix(1 0 0 -1 0 34)'/></g></svg>");

	/* BOOKAMRKS */
	--font-color-bookmarks-button           : var( --font-color-base );
	--background-color-bookmarks            : var( --grayscale-22 );
	--background-color-bookmarks-drag-hover : var( --grayscale-21 );
	--linear-gradient-bookmarks-a           : linear-gradient( var( --grayscale-19 ), var( --grayscale-19-a85 ) );
	--linear-gradient-bookmarks-a-hover     : var( --linear-gradient-form-warning );
	--fill-bookmarks-svg-loader             : var( --grayscale-07 );

	/* FOOTER */
	--background-color-footer : var( --grayscale-22 ); 

	/* MODAL */
	--background-color-modal-ol-li : var( --grayscale-20 );
	--background-color-modal       : var( --grayscale-23 );
	--box-shadow-color-modal       : 0 0 160px 50px var( --grayscale-26 );

	/* SCROLLBARS */
	--scrollbarTrackColor       : var( --background-color-bookmarks );
	--scrollbarThumbColor       : var( --grayscale-15 );
	--scrollbarThumbBorderColor : var( --background-color-bookmarks );	

}

:root .dark-mode .form {
	--scrollbarTrackColor       : transparent;
	--scrollbarThumbColor       : var( --grayscale-17 );
	--scrollbarThumbBorderColor : var( --background-color-form );
}

:root .dark-mode .modal {
	--scrollbarTrackColor       : transparent;	
	--scrollbarThumbColor       : var( --grayscale-17 );
	--scrollbarThumbBorderColor : var( --background-color-modal );
}

@media ( prefers-color-scheme: dark ) {

	:root {
		/* BASE */
		--font-color-base   : var( --grayscale-02 );
		--font-color-a-base : var( --grayscale-02 );

		/* BODY */
		--background-color-body : var( --background-color-form );

		/* FORM */
		--font-color-form-inputs                    : var( --grayscale-25 );
		--background-color-form                     : var( --grayscale-24 );
		--background-color-form-label               : var( --grayscale-22 );
		--background-color-form-inputs              : var( --grayscale-03 );
		--background-color-form-input-radio-checked : var( --grayscale-25 );
		--linear-gradient-form-label-hover          : linear-gradient( var( --grayscale-23 ), var( --grayscale-23-a85 ) );
		--linear-gradient-form-close-hover          : var( --linear-gradient-form-label-hover );
		--background-image-form-select              : url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='25' height='34' viewBox='0 0 25 34'><g fill-rule='evenodd' stroke='none'><rect width='25' height='34' fill='rgba(201,201,201,1)' /><polygon fill='rgba(25,25,25,1)' points='12.5 14 19 20 6 20' transform='matrix(1 0 0 -1 0 34)'/></g></svg>");

		/* BOOKAMRKS */
		--font-color-bookmarks-button           : var( --font-color-base );
		--background-color-bookmarks            : var( --grayscale-22 );
		--background-color-bookmarks-drag-hover : var( --grayscale-21 );
		--linear-gradient-bookmarks-a           : linear-gradient( var( --grayscale-19 ), var( --grayscale-19-a85 ) );
		--linear-gradient-bookmarks-a-hover     : var( --linear-gradient-form-warning );
		--fill-bookmarks-svg-loader             : var( --grayscale-07 );

		/* FOOTER */
		--background-color-footer : var( --grayscale-22 ); 

		/* MODAL */
		--background-color-modal-ol-li : var( --grayscale-20 );
		--background-color-modal       : var( --grayscale-23 );
		--box-shadow-color-modal       : 0 0 160px 50px var( --grayscale-26 );

		/* SCROLLBARS */
		--scrollbarTrackColor       : var( --background-color-bookmarks );
		--scrollbarThumbColor       : var( --grayscale-15 );
		--scrollbarThumbBorderColor : var( --background-color-bookmarks );	

	}

	:root .form {
		--scrollbarTrackColor       : transparent;
		--scrollbarThumbColor       : var( --grayscale-17 );
		--scrollbarThumbBorderColor : var( --background-color-form );
	}

	:root .modal {
		--scrollbarTrackColor       : transparent;	
		--scrollbarThumbColor       : var( --grayscale-17 );
		--scrollbarThumbBorderColor : var( --background-color-modal );
	}
}
/* END VARIABLES */

